Removed unsupported jgoodies Updated java idioms Refactored to use ceridwen-util NullOutputStream